# django-jalalify

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
django_jalalify/: __init__.py  apps.py  fields.py  filters.py  functions.py  mixins.py  tests.py  timezone.py  utils.py
django_jalalify/admin/: filters.py
django_jalalify/templates/django_jalalify/: date_filter.html  date_filter_1_8.html
