[metadata]
name = django-jalalify
version = 1.1.1
description = Pluggable django app to provide some utilities for jalali solar calendar for your Django projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/javadnikbakht/django-jalalify
author = Mohammad Javad Nikbakht
author_email = javadnikbakht@mail.com
license = GNU General Public License v3 (GPLv3)
license_files = file: LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django >= 3.0
    djangorestframework >= 3.11.0
    django-filter >= 2.3.0
    khayyam >= 3.0.17
    pytz >= 2023.3
